ie7 dropdown menu z-index fix

--- a/web/themes/novatel/less/header.less
+++ b/web/themes/novatel/less/header.less
@@ -100,6 +100,7 @@ body {
 					.dropdown-menu {
 						top: 40px;
 						// left: initial;
+						z-index: 100;
 						margin-left: -10px;
 						padding-bottom: 15px;
 						min-width: 220px;
