--- a/web/themes/novatel/less/style.css
+++ b/web/themes/novatel/less/style.css
@@ -839,7 +839,7 @@ body .headerWrap .mainHeader .mainMenu .nav>li{float:left;}body .headerWrap .mai
 body .headerWrap .mainHeader .mainMenu .nav>li>a:hover,body .headerWrap .mainHeader .mainMenu .nav>li>a.hover{color:#555555;background-color:#eeeeee;}
 body .headerWrap .mainHeader .mainMenu .nav>li.nav-selected{background-color:rgba(180, 180, 180, 0.4);}
 body .headerWrap .mainHeader .mainMenu .nav>li.nav-path-selected{background-color:rgba(180, 180, 180, 0.4);}
-body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu{top:40px;margin-left:-10px;padding-bottom:15px;min-width:220px;background:rgba(255, 255, 255, 0.9);border-radius:1px;border-bottom:5px solid #3361aa;}body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li a,body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li a:visited{color:#555555;text-shadow:1px 1px #eeeeee;padding:6px 0px 4px;margin-left:20px;margin-right:20px;border-bottom:1px solid #b4b4b4;font-size:12px;text-decoration:none;}
+body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu{top:40px;z-index:100;margin-left:-10px;padding-bottom:15px;min-width:220px;background:rgba(255, 255, 255, 0.9);border-radius:1px;border-bottom:5px solid #3361aa;}body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li a,body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li a:visited{color:#555555;text-shadow:1px 1px #eeeeee;padding:6px 0px 4px;margin-left:20px;margin-right:20px;border-bottom:1px solid #b4b4b4;font-size:12px;text-decoration:none;}
 body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li a:hover{font-weight:bold;background-color:transparent;background-image:none;}
 body .headerWrap .mainHeader .mainMenu .nav .dropdown-menu li span.nav-static{display:block;text-shadow:1px 1px #eeeeee;font-weight:600;padding:6px 0px 4px;margin-left:20px;margin-right:20px;border-bottom:1px solid #b4b4b4;}
 body .wrap{margin:0px auto;width:1024px;min-height:400px;}
